--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         password: ${{ secrets.AZURE_ROLE_PASSWORD }}
         registry: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io
     - run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin 
-    - name: Build and Push to ACR
+    # - name: Build and Push to ACR
     #   uses: docker/build-push-action@v2
     #   with:
     #     push: true
