--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         username: ${{ secrets.AZURE_ROLE_USER }}
         password: ${{ secrets.AZURE_ROLE_PASSWORD }}
         registry: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io
-    - run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin 
+    - run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" -p "${{ secrets.DOCKER_PASSWORD }}"
     # - name: Build and Push to ACR
     #   uses: docker/build-push-action@v2
     #   with:
