--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ jobs:
     #     tags: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/sampleappl:V2
     #     file: Dockerfile
     - run: |
-        docker login -u ${{ secrets.AZURE_ROLE_USER }} -p ${{ secrets.AZURE_ROLE_PASSWORD }} ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io
+        echo "${{ secrets.AZURE_ROLE_PASSWORD }}"| docker login -u ${{ secrets.AZURE_ROLE_USER }} --password-stdin ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io
         docker build . -t ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/sampleapp:V1
         docker push ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/sampleapp:V1
